[package]
name = "vui-7z"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
nvim-rs = { version = "0.6.0", features = ["use_tokio"] }
tokio = { version = "1.35.1", features = ["macros"] }
parity-tokio-ipc = { version = "0.9.0" }
# ropey = "1.6.1"
log = "0.4.20"
log4rs = { version = "1.2.0", features = ["file_appender"] }
boxed_macro = { path = "./boxed_macro" }
lazy_static = "1.4.0"
clap = { version = "4.4.12", features = ["derive"] }
# thiserror = "1.0.51"
